<resources>
    <string name="app_name" translatable="false">Doarmário</string>
    <string name="splash_doarmario">Doarmário, 2019.</string>

    <string name="titulo_login">Login</string>
    <string name="titulo_list_usuario">Dados do usuário</string>

    <string name="pecas_doadas">peças doadas</string>
    <string name="pecas_desc">Descrição:</string>
    <string name="pecas_desc_exemplo">Ex. blusa preferida</string>
    <string name="cor_desc">Cor: </string>
    <string name="foto_txt">Clique no botão para selecionar a foto</string>
    <string name="marcadores_desc">Marcadores: </string>
    <string name="categoria_desc">Categoria: </string>
    <string name="foto_desc">Selecione a foto da peça</string>
    <string name="desc_img_peca">Peça</string>
    <string name="btt_add">adicionar</string>
    <string name="btt_upd">alterar</string>
    <string name="btt_cad">cadastrar</string>
    <string name="btt_enviar">enviar</string>
    <string name="_10">10</string>

    <!-- LOGIN -->
    <string name="desc_nome">Nome usuário</string>
    <string name="desc_email">E-mail</string>
    <string name="desc_senha">Senha</string>
    <string name="desc_senha_nov">Digite a senha novamente</string>
    <string name="desc_senha_esqueceu">Esqueceu sua senha?</string>

    <string name="desc_login">Fazer Login</string>
    <string name="desc_nova_conta">Criar nova conta</string>
    <string name="redefinir_senha_cont">Enviaremos um e-mail para redefinição da senha.</string>
    <string name="redefinir_senha">Redefinir senha</string>

    <string name="senhas_incompativeis">Senhas incompatíveis, digite novamente</string>

    <string name="enviar_email_sucesso">E-mail enviado com sucesso</string>
    <string name="enviar_email_erro">Erro ao enviar email de recuperação de senha</string>

    <string name="usuario_inexistente">Usuario inexistente</string>
    <string name="email_inexistente">Email inexistente</string>
    <string name="senha_incorreta">Senha incorreta!</string>

    <string name="logoff_sucesso">LogOff com sucesso!</string>


    <!-- CADASTRO USUÁRIO -->
    <string name="usuario_ja_existente">Erro, nome de usuário já existe!</string>
    <string name="email_ja_existente">Erro, e-mail já cadastrado!</string>
    <string name="campo_vazio">Campo vazio! Esse campo deve ser preenchido!</string>

    <string name="bem_vindo">Bem-vindx ao sistema, </string>


    <!-- CRUD USUARIO -->
    <string name="cadastro_sucesso">Usuario cadastrado com sucesso!</string>
    <string name="cadastro_erro">Erro ao cadastrar!</string>

    <string name="erro_listagem">Erro ao realizar listagem de uauário!</string>

    <string name="usuario_upd_sucesso">Dados atualizados com sucesso</string>
    <string name="usuario_upd_erro">Erro ao atualizar dados</string>

    <string name="usuario_del_sucesso">Conta removida com sucesso</string>
    <string name="usuario_del_erro">Erro ao remover dados</string>
    <string name="usuario_del_dialog_titulo">Confirmar exclusão de conta</string>
    <string name="usuario_del_dialog_conteudo">Deseja excluir sua conta? Isso irá apagar todos os dados do aplicativo. Esse processo é irreversível.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="listausuario">Sobre você</string>
    <string name="cadastrarPeças">Cadastrar</string>
    <string name="listar">Listar todas as peças</string>
    <string name="listadoadas">Listar peças doadas</string>
    <string name="listaNaoUtilizadas">Cadastrar doação</string>
    <string name="listaMontagem">Listar montagens</string>
    <string name="botao_salvar">Salvar</string>
    <string name="filtrar_montagem">Filtrar</string>
    <string name="escolher_data">Escolha uma data</string>

    <string name="btt_salvar">Salvar</string>
    <!--MENU-->
    <string name="sobre_mim">Sobre mim</string>
    <string name="montar_looks">Montar looks</string>
    <string name="cadastrar_peças"> Cadastrar peças</string>
    <string name="pecas">Peças</string>
    <string name="peças_doadas">Peças doadas</string>
    <string name="peças_doacao">Cadastrar doação</string>
    <string name="montagens">Montagens</string>
    <string name="sobre_as_desenvolvedoras">Sobre as desenvolvedoras</string>
    <string name="sair">Sair</string>
    <string name="pagina_inicial">Página Inicial</string>

    <string name="listagens">Listagem</string>
    <string name="app_name_cadastro_vestuario">Cadastro Peça</string>
    <string name="app_name_listagem_vestuario">Listagem Peças</string>
    <string name="app_name_detalhamento_vestuario">Detalhamento Peças</string>
    <string name="seleciona_foto_vestuario">Clique no botão para selecionar a foto da peça</string>
    <string name="txt_desc_vestuario">Descrição:</string>
    <string name="exemplo_desc_vestuario">Ex. blusa preferida</string>
    <string name="txt_desc_cor">Cor: </string>
    <string name="txt_desc_categoria">Categoria: </string>
    <string name="menu_listagens">Listagens</string>

    <!--filtros-->
    <string name="filtros">Filtros </string>
    <string name="filtros_aplicar">Aplicar filtros</string>

    <!--montagem-->
    <string name="nenhuma_montagem">Nenhuma montagem foi encontrada cadastrada nessa data!</string>
    <string name="montagem_seta">Clique na seta para ver mais montagens dessa data</string>
    <string name="montagem_erro_carregar">Não foi possível carregar</string>
    <string name="montagem_salvar_sucesso">Montagem salva com sucesso!</string>
    <string name="montagem_salvar_erro">Não foi possível salvar montagem!</string>

    <string name="vestuario_salvar_sucesso">Sucesso ao salvar Vestuário</string>

</resources>
