<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/bg_botao"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".view.ui.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/redefinir_senha"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="@string/redefinir_senha_cont"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/txtRecEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/desc_email"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/bttEnviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/colorYellow"
        android:onClick="enviarEmail"
        android:text="@string/btt_enviar"
        android:textColor="@color/colorPrimary" />

</LinearLayout>