<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center|center_vertical"
    android:orientation="vertical"
    tools:context=".view.ui.LoginActivity">

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="4dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/desc_email"

        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="4dp"
        android:ems="10"
        android:hint="@string/desc_senha"
        android:inputType="textPassword"

        />

    <Button
        android:id="@+id/bttLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:onClick="login"
        android:text="@string/desc_login"
        android:background="@drawable/bg_botao"
        android:textColor="@color/colorPrimary"

        />

    <Button
        android:id="@+id/bttCriarConta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:onClick="novaConta"
        android:text="@string/desc_nova_conta"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/txtRedefinirSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="4dp"
        android:ems="10"
        android:text="@string/desc_senha_esqueceu"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark" />

</LinearLayout>