<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_weight="2"
        android:orientation="vertical"
        >

        <ImageButton
            android:id="@+id/btt_seleciona_img_vestuario"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:adjustViewBounds="true"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_camera"
            android:text="@string/seleciona_foto_vestuario"
            android:contentDescription="@string/seleciona_foto_vestuario"
            android:scaleType="centerCrop"
            android:background="@color/colorWhite"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/seleciona_foto_vestuario"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_weight="1"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/txt_desc_vestuario"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/descricao_vestuario"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text"
                android:hint="@string/exemplo_desc_vestuario"
                android:layout_gravity="center_vertical"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_weight="1">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/txt_desc_cor"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spnCor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_weight="1"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/txt_desc_categoria"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spnCategoria"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_weight="1"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/marcadores_desc"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spnMarcadores"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_weight="1"
            >

            <Button
                android:id="@+id/bttAdicionar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_botao_adicionar"
                android:gravity="end"
                android:padding="15dp"
                android:text="@string/btt_salvar"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>