<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center|center_horizontal|center_vertical"
    android:gravity="center|center_horizontal|center_vertical"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/desc_senha"
            android:scrollbarSize="14sp"
            android:text="@string/desc_nome"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            tools:text="@string/desc_nome" />

        <TextView
            android:id="@+id/txtNomeUsuario"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:scrollbarSize="14sp"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/desc_email"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:autofillHints=""
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/desc_senha"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txtSenha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:autofillHints=""
            android:ems="10"
            android:inputType="numberPassword"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/bttSalvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/btt_add"
            android:contentDescription="@string/_10"
            android:onClick="atualizar"
            app:srcCompat="@drawable/ic_save"
            tools:ignore="VectorDrawableCompat" />

        <ImageButton
            android:id="@+id/bttRemover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btt_add"
            android:contentDescription="@string/_10"
            android:onClick="deletar"
            app:srcCompat="@drawable/ic_delete"
            tools:ignore="VectorDrawableCompat" />

    </LinearLayout>


</LinearLayout>